--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile libraries.supportAppCompat
     compile libraries.supportDesign
     compile libraries.constraintLayout
+    compile libraries.calligraphy
     testCompile libraries.junit
 }
