--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,6 +12,8 @@ ext.versions = [
         supportLibs                  : '25.3.1',
         constraintLayout             : '1.0.2',
 
+        calligraphy                  : '2.3.0',
+
         espresso                     : '2.2.2',
 
         junit                        : '4.12'
@@ -26,6 +28,8 @@ ext.libraries = [
         supportDesign           : "com.android.support:design:$versions.supportLibs",
 
         constraintLayout        : "com.android.support.constraint:constraint-layout:$versions.constraintLayout",
+
+        calligraphy             : "uk.co.chrisjenx:calligraphy:$versions.calligraphy",
 
         // Test dependencies
         junit                   : "junit:junit:$versions.junit",
